[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "os-mfa"
version = "0.4.2"
description = "A minimal utility for managing cli authentication with openstack more securely and conveniently"
readme = "README.md"
authors = [{ name = "Simon Merrick", email = "s.m3rrick@gmail.com" }]
# license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["openstack", "mfa", "auth"]
dependencies = [
    "requests",
    "PyYaml",
    "python-dateutil"
]
requires-python = ">= 3.6"

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "twine", "build", "mypy"]

[project.urls]
Homepage = "https://github.com/iokiwi/os-mfa"

[project.scripts]
os-mfa = "os_mfa.__main__:main"

[tool.bumpver]
current_version = "0.4.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"os_mfa/__init__.py" = [
    "{version}"
]
